@@ -17,24 +17,9 @@ get_header(); ?>
     <div id="content">
         <div id="main-blog">
             <?php if ( have_posts() ) :
-                while ( have_posts() ) : the_post(); ?>
-                    <div class="clear">&nbsp;</div>
-                    <div <?php post_class(); ?> id="post-<?php the_ID(); ?>">
-                        <div class="post-comments">
-                            <?php if ( ! post_password_required() ) {
-                                comments_popup_link( __( '0', 'desk-mess-mirrored' ), __( '1', 'desk-mess-mirrored' ), __( '%', 'desk-mess-mirrored' ), '',__( '-', 'desk-mess-mirrored' ) );
-                        } ?>
-                        </div>
-                        <h1><a href="<?php the_permalink() ?>" rel="bookmark" title="<?php _e( 'Permanent Link to', 'desk-mess-mirrored' );?> <?php the_title_attribute(); ?>"><?php the_title(); ?></a></h1>
-                        <div class="postdata">
-                            <?php printf( __( '%1$s by %2$s on ', 'desk-mess-mirrored' ), dmm_use_posted(), get_the_author() );
-                            the_time( get_option( 'date_format' ) );
-                            _e( ' in ', 'desk-mess-mirrored' ); the_category( ', ' ); edit_post_link( __( 'Edit', 'desk-mess-mirrored' ), __( ' &#124; ', 'desk-mess-mirrored' ), __( '', 'desk-mess-mirrored' ) ); ?>
-                        </div><!-- .postdata -->
-                        <?php the_excerpt(); ?>
-                        <p class="single-meta" style="float:right; margin-top:5px; margin-right:10px; font-size:11px; "> <?php the_tags(); ?></p>
-                    </div> <!-- .post #post-id -->
-                <?php endwhile; ?>
+                while ( have_posts() ) : the_post();
+                    get_template_part( 'desk-mess-mirrored', get_post_format() );
+                endwhile; ?>
                 <div id="nav-global" class="navigation">
                     <div class="left">
                         <?php next_posts_link( __( '&laquo; Previous entries', 'desk-mess-mirrored' ) ); ?>
