@@ -34,33 +34,11 @@ $curauth = ( get_query_var( 'author_name ') ) ? get_user_by( 'id', get_query_var
             <h2><?php _e( 'Posts by ', 'desk-mess-mirrored' ); echo $curauth->display_name; ?>:</h2>
             <!-- start the Loop -->
             <?php if ( have_posts() ) :
+                global $count;
                 $count = 0;
                 while ( have_posts() ) : the_post();
-                    $count++; ?>
-                    <div class="clear">&nbsp;</div>
-                    <div <?php post_class(); ?> id="post-<?php the_ID(); ?>">
-                        <div class="post-comments">
-                            <?php if ( ! post_password_required() ) {
-                                comments_popup_link( __( '0', 'desk-mess-mirrored' ), __( '1', 'desk-mess-mirrored' ), __( '%', 'desk-mess-mirrored' ), '',__( '-', 'desk-mess-mirrored' ) );
-                            } ?>
-                        </div>
-                        <h1><a href="<?php the_permalink() ?>" rel="bookmark" title="<?php _e( 'Permanent Link to', 'desk-mess-mirrored' ); ?> <?php the_title_attribute(); ?>"><?php the_title(); ?></a></h1>
-                        <div class="postdata">
-                            <?php printf( __( '%1$s by %2$s on ', 'desk-mess-mirrored' ), dmm_use_posted(), get_the_author() );
-                            the_time( get_option( 'date_format' ) );
-                            _e( ' in ', 'desk-mess-mirrored' ); the_category( ', ' ); edit_post_link( __( 'Edit', 'desk-mess-mirrored' ), __( ' &#124; ', 'desk-mess-mirrored' ), __( '', 'desk-mess-mirrored' ) ); ?>
-                        </div><!-- .postdata -->
-                        <?php if ( $count == 1 ) :
-                            the_content( __( ' ... continue reading. ', 'desk-mess-mirrored' ) ); ?>
-                            <div class="clear"></div> <!-- For inserted media at the end of the post -->
-                            <?php wp_link_pages( array( 'before' => '<p><strong>Pages:</strong> ', 'after' => '</p>', 'next_or_number' => 'number' ) ); ?>
-                            <p class="single-meta"><?php the_tags(); ?></p>
-                        <?php else :
-                            the_excerpt();
-                        endif; ?>
-                        <div class="clear"></div> <!-- For inserted media at the end of the post -->
-                    </div> <!-- .post #post-ID -->
-                <?php endwhile; ?>
+                    get_template_part( 'desk-mess-mirrored', get_post_format() );
+                endwhile; ?>
                 <div id="nav-global" class="navigation">
                     <div class="left">
                         <?php next_posts_link( __( '&laquo; Previous entries', 'desk-mess-mirrored' ) ); ?>
