@@ -17,16 +17,8 @@ get_header(); ?>
     <div id="content">
         <div id="main-blog">
             <?php if ( have_posts() ) :
-                while ( have_posts() ) : the_post(); ?>
-                    <div class="clear">&nbsp;</div>
-                    <div <?php post_class(); ?> id="post-<?php the_ID(); ?>">
-                        <h1><?php the_title(); ?></h1>
-                        <?php edit_post_link( __( '&raquo; Edit this page &laquo;', 'desk-mess-mirrored' ), __( '', 'desk-mess-mirrored' ), __( '', 'desk-mess-mirrored' ) );
-                        the_content( __( ' ... continue reading. ', 'desk-mess-mirrored' ) ); ?>
-                        <div class="clear"></div> <!-- For inserted media at the end of the post -->
-                        <?php wp_link_pages( array( 'before' => '<p><strong>Pages:</strong> ', 'after' => '</p>', 'next_or_number' => 'number' ) ); ?>
-                    </div> <!-- .post #post-ID -->
-                    <?php comments_template();
+                while ( have_posts() ) : the_post();
+                    get_template_part( 'desk-mess-mirrored', get_post_format() );
                 endwhile;
             else : ?>
                 <h2><?php printf( __( 'Search Results for: %s' ), '<span>' . esc_html( get_search_query() ) . '</span>' ); ?></h2>
@@ -39,4 +31,3 @@ get_header(); ?>
     </div><!-- #content -->
 </div><!-- #wrapper -->
 <?php get_footer();?>
-<?php /* Last revised November 29, 2011 v1.9.1 */ ?>
